@@ -1,9 +1,9 @@
 # UV Leo Bessell B
 # Data from the Crni Vrh Observatory, Slovenia
-#
+
 # Standard star T0845-00073 used to measure nightly sigma.
 # Weights calculated as 1/sigma^2, renormalized to [0.1, 9.9].
-#
+
 #     HJD          Mag      w
 2451602.395411   10.130   2.53
 2451602.397101   10.129   2.53
