@@ -1,3 +1,4 @@
+2006-01-13:	PHOEBE_0.29 stable version released.
 2005-11-10:     PHOEBE_0.28a bugfix version released.
 2005-11-01:     PHOEBE_0.28 stable version released.
 2005-05-30:	PHOEBE_0.27 stable version released.
